Redis storage implementation
Rebase, merge and adjust changes from #263. Squashed commit of the following:

commit 3a566ce2ee8d782754074906348b99f91ac53704
Merge: 85ccf21 98a31c6
Author: Sudarshan <sudar.theone@gmail.com>
Date:   Fri Jan 6 12:20:42 2017 +0530

    storage/redis: fixed an issue with redis connection not being threadsafe

commit 85ccf21004c1e90acd2828abba24d2190e226312
Author: Sudarshan <sudar.theone@gmail.com>
Date:   Tue Jan 3 15:25:49 2017 +0530

    redis: fixed a threadsafety issue with connections

commit e6ad2b52c9145cba26daab61a6f96d3e1ae4733a
Author: Sudarshan <sudar.theone@gmail.com>
Date:   Tue Jan 3 15:01:38 2017 +0530

    redis : improved redis connections

commit d2e66d34c39403235f548237539ed386d6d27529
Author: Sudarshan <sudar.theone@gmail.com>
Date:   Sat Dec 31 16:37:05 2016 +0530

    redis: format fixes and a goroutine to stop better

commit f4bf508904705812952a1d1ae1c510338b8b3bab
Author: Sudarshan <sudar.theone@gmail.com>
Date:   Tue Dec 27 15:52:47 2016 +0530

    redis: peer_store minor tweak

commit da8ea17ef58bbc10c91b66c6f81ab4b10b5ba326
Merge: df642d1 17ef429
Author: Sudarshan <sudar.theone@gmail.com>
Date:   Tue Dec 27 15:43:22 2016 +0530

    redis: ipv6 bug-fix and minor tweaks

commit df642d10dae01cece94be505b1d24c84f506315a
Author: Sudarshan <sudar.theone@gmail.com>
Date:   Mon Dec 26 19:32:06 2016 +0530

    redis: fixed package failure

commit 2caab53b0471715715a51ab10d0f2c500f076639
Author: Sudarshan <sudar.theone@gmail.com>
Date:   Mon Dec 26 19:22:39 2016 +0530

    storage: added a redis storage option

commit 98a31c6e5985c982aa0c709d8f064f22b590173c
Author: Sudarshan Reddy <sudar.theone@gmail.com>
Date:   Wed Jan 4 16:23:24 2017 +0530

    redis: improved threadsafety amongst redigo connections (#4)

    * redis: improved threadsafety amongst redigo connections

    * redis: fixed a oversights and bad mistakes

    * redis : fixed a potential redis timing out a redigomock connection issue

commit be109fe921b7438

--- a/example_config.yaml
+++ b/example_config.yaml
@@ -67,6 +67,7 @@ chihaya:
 
   # This block defines configuration used for the storage of peer data.
   storage:
+    # Comment out one of these types to choose storage type
     name: memory
     config:
       # The frequency which stale peers are removed.
@@ -79,6 +80,16 @@ chihaya:
       # The number of partitions data will be divided into in order to provide a
       # higher degree of parallelism.
       shard_count: 1024
+    # name: redis
+    # config:
+    #   key_prefix: "nm:"
+    #   instance: 0
+    #   max_numwant: 100
+    #   max_idle: 100
+    #   host: 127.0.0.1
+    #   port: 6379
+    #   gc_interval: 15m
+    #   peer_liftetime: 15m
 
       # The interval at which metrics about the number of infohashes and peers
       # are collected and posted to Prometheus.
