--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,32 @@ language: go
 go:
 - 1.8
 sudo: false
+services:
+- redis-server
 install:
+- mkdir -p $GOPATH/src/github.com/chihaya
+- ln -sf ${TRAVIS_BUILD_DIR} $GOPATH/src/github.com/chihaya/chihaya
+- pushd $GOPATH/src/github.com/chihaya/chihaya
 - go get -t ./...
+#- curl https://glide.sh/get | sh
+#- glide install
 - go get -u github.com/golang/lint/golint
 - go get -u golang.org/x/tools/cmd/goimports
+- popd
 script:
+- pushd $GOPATH/src/github.com/chihaya/chihaya
+- go list ./... | grep -v /vendor/
 - go test -v $(go list ./... | grep -v /vendor/)
 - go vet $(go list ./... | grep -v /vendor/)
 - diff <(goimports -d $(find . -type f -name '*.go' -not -path "./vendor/*")) <(printf "")
 - (for d in $(go list ./... | grep -v /vendor/); do diff <(golint $d) <(printf "") || exit 1;  done)
-notifications:
-  irc:
-    channels:
-    - irc.freenode.net#chihaya
-    use_notice: true
-    skip_join: true
-    on_success: always
-    on_failure: always
-  email: false
+- popd
+# notifications:
+#   irc:
+#     channels:
+#     - irc.freenode.net#chihaya
+#     use_notice: true
+#     skip_join: true
+#     on_success: always
+#     on_failure: always
+#   email: false
